Fix alignment of next and previous page buttons (again)

--- a/styles.css
+++ b/styles.css
@@ -440,8 +440,10 @@ main {
 }
 
 .page_buttons {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    margin-top: auto;
 }
 
 .subpage_title {
